--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         bu sefer Londra’nın dışına çıkarak Fransa, Almanya ve İsviçre’ye yol alacakları yeni ve tehlikeli bir maceraya
         sürükleniyorlar. Onlardan hep bir adım önde olan kurnaz ve vicdansız Profesör Moriarty (Jared Harris) ise -ki
         Holmes en zeki olma unvanını ona kaptırmak üzere- büyük bir laneti değiştirecek planların peşindedir.
-        Kahramanlarımız ise ne olursa olsun Moriarty durdurmaya kararlı...</p>
+        Kahramanlarımız ise ne olursa olsun Moriarty durdurmaya kararlı..</p>
 
 </body>
 
